--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>BBC-HOME</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
@@ -16,8 +18,29 @@
 
     <div class="menuwrapper">
 
-        <a href="home.html" class="nav">HOME</a>
-        <a href="sport.html" class="nav">SPORT</a>
+        <div class="bbclogo">
+
+            <div class="logobox">B</div>
+            <div class="logobox">B</div>
+            <div class="logobox">C</div>
+
+        </div>
+        
+        <div href="home.html" class="nav">HOME</div>
+        <div href="sport.html" class="nav">SPORT</div>
+        <div href="news.html" class="nav">NEWS</div>
+
+    </div>
+
+
+    <div class="homecontainer">
+
+   <div class="homebox homebox1">1</div>
+   <div class="homebox homebox2">2</div>
+   <div class="homebox homebox3">3</div>
+   <div class="homebox homebox4">4</div>
+   <div class="homebox homebox5">5</div>
+
 
     </div>
 
