--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -21,36 +21,42 @@
               
           </div>
           <div class="artur-container-parent">
-      <div class="artur-container1">1</div>
-      <div class="artur-container2">2</div>
-      <div class="artur-container3">3</div>
-      <div class="artur-container4">4</div>
-      <div class="artur-container5">5</div>
-      <div class="artur-container6">6</div>
-      <div class="artur-container7">7</div>
-      <div class="artur-container8">8</div>
-      <div class="artur-container9">9</div>
-      <div class="artur-container10">10</div>
-      <div class="artur-container11">11</div>
-      <div class="artur-container12">12</div>
-      <div class="artur-container13">1</div>
-      <div class="artur-container14">2</div>
-      <div class="artur-container15">3</div>
-      <div class="artur-container16">4</div>
-      <div class="artur-container17">5</div>
-      <div class="artur-container18">6</div>
-      <div class="artur-container19">7</div>
-      <div class="artur-container20">8</div>
-      <div class="artur-container21">1</div>
-      <div class="artur-container22">2</div>
-      <div class="artur-container23">3</div>
-      <div class="artur-container24">4</div>
-      <div class="artur-container25">5</div>
-      <div class="artur-container26">6</div>
-      <div class="artur-container27">7</div>
-      <div class="artur-container28">8</div>
-      <div class="artur-container29">9</div>
-      <div class="artur-container30">10</div>
+            <div class="container-artur-ad">
+
+
+            </div>
+
+
+
+
+
+
+
+
+            <div class="container-artur-top-navbar">
+
+            </div>
+
+
+
+
+
+
+            <div class="container-artur-bigpic">
+
+            </div>
+
+
+
+
+
+
+            <div class="container-artur-grid-ad">
+              <div class="container-grid"></div>
+              <div class="container-grid"></div>
+
+            </div>
+      
     </div>
 </body>
 </html>
