--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/sports.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/sports.html
@@ -29,33 +29,33 @@
    
     <div class="wrapper">
         <div class="box">
-            <img src="img/grid/OIF.jpg" alt="">
+            <img class="imge" src="img/grid/OIF.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
 
         <div class="box">
-            <img src="img/grid/OIP (1).jpg" alt="">
+            <img class="imge" src="img/grid/OIP (1).jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
         <div class="box">
-            <img src="img/grid/הורדה (2).jpg" alt="">
+            <img class="imge" src="img/grid/הורדה (2).jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
         <div class="box">
-            <img src="img/grid/הורדה (1).jpg" alt="">
+            <img class="imge" src="img/grid/הורדה (1).jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
         <div class="box">
-            <img src="img/grid/הורדה.jpg" alt="">
+            <img class="imge" src="img/grid/הורדה.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
         <div class="box">
-            <img src="img/grid/OIP.jpg" alt="">
+            <img class="imge" src="img/grid/OIP.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <h3>sport</h3>
         </div>
