--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
@@ -33,7 +33,7 @@
             <a href="sports.html">Sports</a>
         </div>
     </div>
-    <div class="wrraper_u">
+    <div class="wrrapers">
         <div class="left">
 
 
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-    <div class="wrraper down">
+    <div class="wrrapers">
         <div class="box_d">
             <img src="https://picsum.photos/id/1006/200/300">
             <h6>
