--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/home.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="right">
-            <div class="box">
+            <div class="box_u">
                 <div class="explain">
                     <h5>
                         This animal is in danger
@@ -57,7 +57,7 @@
                     </p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box_u">
 
 
                 <div class="explain">
@@ -69,7 +69,7 @@
                     </p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box_u">
 
                 <div class="explain">
                     <h5>
@@ -80,7 +80,7 @@
                     </p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box_u">
 
 
                 <div class="explain">
