--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -25,7 +25,7 @@
             <div class="logobox">C</div>
 
         </div>
-        
+
         <div href="home.html" class="nav">HOME</div>
         <div href="sport.html" class="nav">SPORT</div>
         <div href="news.html" class="nav">NEWS</div>
@@ -35,11 +35,55 @@
 
     <div class="homecontainer">
 
-   <div class="homebox homebox1">1</div>
-   <div class="homebox homebox2">2</div>
-   <div class="homebox homebox3">3</div>
-   <div class="homebox homebox4">4</div>
-   <div class="homebox homebox5">5</div>
+        <div class="homebox homebox1">
+
+            <P>Channel rescue operation 
+                after dozens of migrants drown</P>
+            <P>French police say at least 30 people headed to the UK
+                have died after their boat sank ner Calais.
+            </P>
+            <p>EUROPE</p>
+
+        </div>
+
+        <div class="homebox homebox2">
+
+            <P>Migrants die in biggest loss
+                of life in Channel
+            </P>
+            <P>UK</P>
+
+        </div>
+
+        <div class="homebox homebox3">
+
+            <P>Shooting of black US
+                jogger - three men found
+                guilty
+            </P>
+            <P> US & CANADA </P>
+
+        </div>
+
+
+        <div class="homebox homebox4">
+
+            <P>The global spread of and
+                Americanism
+            </P>
+            <P>WORKLIFE</P>
+
+        </div>
+
+
+        <div class="homebox homebox5">
+
+            <P>India's Obscure melodious
+                tradition
+            </P>
+            <P>TRAVEL</P>
+
+        </div>
 
 
     </div>
