Lior's_update_version_3

--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>news</title>
     <link rel="stylesheet" href="News_Lior.css">
+    <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <!--Banner -->
@@ -16,8 +17,13 @@
                 <li> <a href="">News</a></li> 
                 <li> <a href="">Sport</a> </li>
                 <li> <a href="">More</a> </li>
-                <input class="search" type="Search" name="Full_Name" placeholder= "search">
+                <div class="search_box">
+                <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+                <a class="Search-btn" href="">
+                    <i class="fas fa-search"></i>
+                </a>
                 </li>
+            </div>
             </ul>
         </div>
 
