--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -38,7 +38,7 @@
         <div class="homebox homebox1">
 
             <P>Channel rescue operation 
-                after dozens of migrants drown</P>
+                after<br> dozens of migrants drown</P>
             <P>French police say at least 30 people headed to the UK
                 have died after their boat sank ner Calais.
             </P>
