--- a/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/noa.html
+++ b/01-HTML-CSS/05-grid/מיכאל נועה ג'ניה/noa.html
@@ -13,9 +13,9 @@
 
 <body>
     <div class="menu">
-        <a href="jenia.html"><i class="fa fa-fw fa-home"></i>Home</a>
+        <a href="jenia.html"><i class="fa fa-fw fa-home"></i>Sport</a>
         <a href="noa.html"><i class="fas fa-newspaper"></i>News</a>
-        <a href="michael.html"><i class="fas fa-futbol"></i>Sport</a>
+        <a href="michael.html"><i class="fas fa-futbol"></i>Home</a>
     </div>
 
     <div class="container">
