--- a/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/bbc-home/Home.html
@@ -12,10 +12,10 @@
 <body>
   <div class="menu home">
     <div class="nav logo"><img src="logo.jpg"></div>
-    <div class="nav Signin"><a href='signin.html'>Sign In</a></div>
-    <div class="nav Home"><a href='Home.html'>Home</a></div>
-    <div class="nav News"><a href='News.html'>News</a></div>
-    <div class="nav Sport"><a href='Sport.html'>Sport</a></div>
+    <div class="nav signIn"><a href='signin.html'>Sign In</a></div>
+    <div class="nav home"><a href='Home.html'>Home</a></div>
+    <div class="nav news"><a href='News.html'>News</a></div>
+    <div class="nav sport"><a href='Sport.html'>Sport</a></div>
     <div class="nav Search"><input value="search"></div>
   </div>
 
@@ -24,15 +24,6 @@
     <div class="leftstrip">
       <h2>Welcome to BBC.com</h2>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-
-    <div class="rightstrip">
-      <h2>Thursday, 25 November</h2>
-    </div>
-
   </div>
 
   <div class="content topHome">
