--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -26,9 +26,9 @@
 
         </div>
 
-        <div href="home.html" class="nav">HOME</div>
-        <div href="sport.html" class="nav">SPORT</div>
-        <div href="news.html" class="nav">NEWS</div>
+        <a href="home.html" class="nav">HOME</a>
+        <a href="sport.html" class="nav">SPORT</a>
+        <a href="news.html" class="nav">NEWS</a>
 
     </div>
 
@@ -37,11 +37,13 @@
 
         <div class="homebox homebox1">
 
-            <P>Channel rescue operation 
-                after<br> dozens of migrants drown</P>
+            <h1>Channel rescue operation 
+                after<br> dozens of migrants drown</h1>
+
             <P>French police say at least 30 people headed to the UK
                 have died after their boat sank ner Calais.
             </P>
+
             <p>EUROPE</p>
 
         </div>
