--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -44,7 +44,7 @@
                 have died after their boat sank ner Calais.
             </P>
 
-            <p>EUROPE</p>
+            <p> &nbsp&nbsp&nbsp EUROPE</p>
 
         </div>
 
@@ -53,7 +53,7 @@
             <P>Migrants die in biggest loss
                 of life in Channel
             </P>
-            <P>UK</P>
+            <P> &nbsp&nbsp&nbsp UK</P>
 
         </div>
 
@@ -63,7 +63,7 @@
                 jogger - three men found
                 guilty
             </P>
-            <P> US & CANADA </P>
+            <P> &nbsp&nbsp&nbsp US & CANADA </P>
 
         </div>
 
@@ -73,7 +73,7 @@
             <P>The global spread of and
                 Americanism
             </P>
-            <P>WORKLIFE</P>
+            <P> &nbsp&nbsp&nbsp WORKLIFE</P>
 
         </div>
 
@@ -83,7 +83,8 @@
             <P>India's Obscure melodious
                 tradition
             </P>
-            <P>TRAVEL</P>
+            
+            <P> &nbsp&nbsp&nbsp TRAVEL</P>
 
         </div>
 
