--- a/01-HTML-CSS/05-grid/bbc-zoom/news.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/news.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    
+  <ul>
+    <li><a href="news.html">Home</a></li>
+    <li><a href="#">News</a></li>
+    <li><a href="sport.html">Sport</a></li>
+    <li><a href="#">Reel</a></li>
+    <li><a href="#">travl</a></li>
+  </ul>
     <div class="topContainer">
         <div class="box picture"></div>
         <div class="box text"></div>
