BBC-WEBSITE - Copy

--- a/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/sport.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/sport.html
@@ -90,7 +90,7 @@
         </div>
         <div class="box-first-right">
             <div><a href=""><img src="images/barcelona.jpg" alt=""></a></div>
-                <p class="sub-headline"><a href=""><span style='font-size:30px; color: rgb(196, 50, 50);'>&#9632; </span>Strict rules and the end of the old guard?' - how Xavi will bid to
+                <p class="sub-headline"><span style='font-size:30px; color: rgb(196, 50, 50);'>&#9632; </span><a href="">Strict rules and the end of the old guard?' - how Xavi will bid to
                         halt
                         Barcelona's 'lazy decay' Strict rules and the end of the old guard?.
                 </p>
