--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/Sport.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/Sport.html
@@ -15,13 +15,13 @@
         rel="stylesheet">
 
         <!--CSS-->
-    <link rel="stylesheet" href="gridBbc.css">
+    <link rel="stylesheet" href="gridBbc1.css">
 
     <title>BBC</title>
 </head>
 
 <body>
-
+    
     <div class="navBar">
     <h1>Sport</h1>
     <div class="main-menu">
