--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/News.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/News.html
@@ -27,7 +27,7 @@
             <h1>News</h1>
             <div class="main-menu">
 
-                <div class="nav nav1"><a href="Home.html">Home</a></div>
+                <div class="nav nav1"><a href="gridBbc1.html">Home</a></div>
                 <div class="nav nav2 ">Coronav navirus</div>
                 <div class="nav nav3">Climet</div>
                 <div class="nav nav4">Video</div>
@@ -36,11 +36,6 @@
                 <div class="nav nav7">Business</div>
                 <div class="nav nav8">Tech</div>
                 <div class="nav nav9">Sicence</div>
-                <div class="nav nav10">Stories</div>
-                <div class="nav nav11">Entertainment&arts</div>
-                <div class="nav nav12">Health</div>
-                <div class="nav nav13">World News TV</div>
-                <div class="nav nav14">In Picture</div>
             </div>
 
         </div>
@@ -49,8 +44,8 @@
             <img src="image/sweden.jpg" />
             <div class="text">
 
-                <h1>Sweden votes in Magdalena Andersson as first female PM</h1>
-                <p><span class="color">|</span>Sweden </p>
+                <h2>Sweden votes in Magdalena Andersson</h2>
+                <p><span class="line">|</span>Sweden </p>
             </div>
         </div>
 
@@ -58,8 +53,8 @@
             <img src="image/covid.jpg" />
             <div class="text">
 
-                <h1>CovEurop to reach 2.2m Covid deaths by Marchid</h1>
-                <p><span class="color">|</span>Covid</p>
+                <h2>CovEurop to reach 2.2m Covid deaths</h2>
+                <p><span class="line">|</span>Covid</p>
             </div>
         </div>
 
@@ -68,8 +63,8 @@
             <img src="image/Baby.jpg" />
             <div class="text">
 
-                <h1>No babies allowed in Commons, MP Stella Creasy told</h1>
-                <p><span class="color">|</span>Babies </p>
+                <h2>No babies allowed in Commons</h2>
+                <p><span class="line">|</span>Babies </p>
             </div>
         </div>
 
@@ -79,8 +74,8 @@
             <div class="text">
 
 
-                <h1> Mission to smash into Dimorphos space rock launches</h1>
-                <p><span class="color">|</span>NASA </p>
+                <h2> Mission to smash into Dimorphos space rock launches</h2>
+                <p><span class="line">|</span>NASA </p>
             </div>
         </div>
 
@@ -88,8 +83,8 @@
 
             <img src="image/Ruusia.jpg" />
 
-            <h1>Will Russia ever leave fossil fuels behind?</h1>
-            <p><span class="color">|</span>Russia</p>
+            <h2>Will Russia ever leave fossil fuels behind?</h2>
+            <p><span class="line">|</span>Russia</p>
 
         </div>
     </div>
