--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/gridBbc1.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/gridBbc1.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap"
+        rel="stylesheet">
 
     <!--CSS-->
     <link rel="stylesheet" href="gridBbc1.css">
@@ -25,34 +26,34 @@
 
 
         <div class="navBar">
-            <h1>Sport</h1>            
+            <h1>Home</h1>
             <div class="main-menu">
 
-                <div class="nav nav1"> Home</div>
-                <div class="nav nav2"><a href="Sport.html">Football</a></div>
-                <div class="nav nav3">Cricket</div>
-                <div class="nav nav4">Formula</div>
-                <div class="nav nav5">Rugby</div>
-                <div class="nav nav6">Tennis</div>
-                <div class="nav nav7">Golf</div>
-                <div class="nav nav8">Atheltics</div>
-                <div class="nav nav9">Cycling</div>
+                <div class="nav nav1">Home</div>
+                <div class="nav nav2"><a href="Sport.html">Sport</a></div>
+                <div class="nav nav3"><a href="News.html">News</a></div>
+                <div class="nav nav4">ksksks</div>
+                <div class="nav nav5">djdj</div>
+                <div class="nav nav6">lskkks</div>
+                <div class="nav nav7">osososo</div>
+                <div class="nav nav8">ppppp</div>
+                <div class="nav nav9">osxxuxuf</div>
 
             </div>
         </div>
 
 
         <div class="box box1">
-
-
-
-
-
+            <img src="home1.jpg" />
+            <div class="text">
+                <h1>imjdjdjdj</h1>
+                <p><span class="line">|</span> kskskskskskskskskskksks</p>
+            </div>
         </div>
 
 
         <div class="box box2">
-            <img src="https://picsum.photos/id/1002/320/175"/>
+            <img src="https://picsum.photos/id/1002/320/175" />
             <div class="text">
                 <h1>imjdjdjdj</h1>
                 <p><span class="line">|</span> kskskskskskskskskskksks</p>
@@ -61,7 +62,7 @@
 
 
         <div class="box box3">
-            <img src="https://picsum.photos/id/1016/320/175"/>
+            <img src="https://picsum.photos/id/1016/320/175" />
             <div class="text">
                 <h1>imjdjdjdj</h1>
                 <p><span class="line">|</span> kskskskskskskskskskksks</p>
@@ -70,7 +71,7 @@
 
 
         <div class="box box4">
-            <img src="https://picsum.photos/id/1022/320/175"/>
+            <img src="https://picsum.photos/id/1022/320/175" />
             <div class="text">
                 <h1>imjdjdjdj</h1>
                 <p><span class="line">|</span> kskskskskskskskskskksks</p>
@@ -79,7 +80,7 @@
 
 
         <div class="box box5">
-            <img src="https://picsum.photos/id/1023/320/175"/>
+            <img src="https://picsum.photos/id/1023/320/175" />
             <h1>imjdjdjdj</h1>
             <p><span class="line">|</span> kskskskskskskskskskksks</p>
         </div>
