--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/Sport.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/Sport.html
@@ -28,8 +28,8 @@
             <h1>Sport</h1>            
             <div class="main-menu">
 
-                <div class="nav nav1"> Home</div>
-                <div class="nav nav2"><a href="Sport.html">Football</a></div>
+                <div class="nav nav1"><a href="gridBbc1.html">Home</a></div>
+                <div class="nav nav2">Football</div>
                 <div class="nav nav3">Cricket</div>
                 <div class="nav nav4">Formula</div>
                 <div class="nav nav5">Rugby</div>
