--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/home.html
@@ -11,26 +11,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-    <div class="menuwrapper">
-
-        <div class="bbclogo">
-
-            <div class="logobox">B</div>
-            <div class="logobox">B</div>
-            <div class="logobox">C</div>
-
+     <!--Banner -->
+     <div class="banner">        
+        <div class="navbar">
+            
+            <ul> 
+                <li><a href="" class="BBC_logo firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="BBC_logo secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
+                <li><a href="" class="BBC_logo thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
+                <li><a href="" class="BBC_LOG_2">|</a></li>  
+                <li><a href="home.html">Home</a></li> 
+                <li> <a href="01-HTML-CSS\05-grid\Or&Michael&Lior\News.html">News</a></li> 
+                <li> <a href="sport.html">Sport</a> </li>
+                <div class="search_box">
+                <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+                <a class="Search-btn" href="">
+                    <i class="fas fa-search"></i>
+                </a>
+                </li>
+            </div>
+            </ul>
         </div>
-
-        <a href="home.html" class="nav">HOME</a>
-        <a href="sport.html" class="nav">SPORT</a>
-        <a href="news.html" class="nav">NEWS</a>
-
-    </div>
 
 
     <div class="homecontainer">
