--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/sport.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/sport.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
     <title>BBC-SPORT</title>
     <link rel="stylesheet" href="style.css">
 
@@ -16,12 +17,27 @@
 
 <body>
 
-    <div class="menuwrapper">
-
-        <a href="home.html" class="nav">HOME</a>
-        <a href="sport.html" class="nav">SPORT</a>
-
+  <!--Banner -->
+  <div class="banner">        
+    <div class="navbar">
+        <ul> 
+            <li><a href="" class="BBC_logo firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
+            <li><a href="" class="BBC_logo secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
+            <li><a href="" class="BBC_logo thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
+            <li><a href="" class="BBC_LOG_2">|</a></li>  
+            <li><a href="home.html">Home</a></li> 
+            <li> <a href="C:\Users\liork\Documents\GitHub\fullstack2021\01-HTML-CSS\05-grid\Or&Michael&Lior\News.html">News</a></li> 
+            <li> <a href="01-HTML-CSS\05-grid\Or&Michael&Lior\sport.html">Sport</a> </li>
+            <div class="search_box">
+            <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
+            <a class="Search-btn" href="">
+                <i class="fas fa-search"></i>
+            </a>
+            </li>
+        </div>
+        </ul>
     </div>
+
     <div class="sport-menu">
         <h1 class="sport-menu2">SPORT</h1>
     </div>
