--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/sport.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/sport.html
@@ -26,7 +26,7 @@
             <li><a href="" class="BBC_logo thridletter" style="color: rgb(24, 3, 3);">C</a></li> 
             <li><a href="" class="BBC_LOG_2">|</a></li>  
             <li><a href="home.html">Home</a></li> 
-            <li> <a href="C:\Users\liork\Documents\GitHub\fullstack2021\01-HTML-CSS\05-grid\Or&Michael&Lior\News.html">News</a></li> 
+            <li> <a href="News.html">News</a></li> 
             <li> <a href="01-HTML-CSS\05-grid\Or&Michael&Lior\sport.html">Sport</a> </li>
             <div class="search_box">
             <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
