--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
@@ -20,7 +20,7 @@
                 <li><a href="" class="BBC_LOG_2">|</a></li>  
                 <li><a href="home.html">Home</a></li> 
                 <li> <a href="News.html ">News</a></li> 
-                <li> <a href="01-HTML-CSS\05-grid\Or&Michael&Lior\sport.html">Sport</a> </li>
+                <li> <a href="sport.html">Sport</a> </li>
                 <div class="search_box">
                 <input class="search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
                 <a class="Search-btn" href="">
