--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Task5.html
@@ -110,7 +110,7 @@
                 <div class="lala Spic6">
                     <img src="https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/5bdc1ffc-4739-4bb4-a538-35f411cbea0e.png" alt="">
                     <h3>Champions League reaction & Premier League news conferences</h3>
-                    <p>lalala</p>
+                    <p>In total, 11 teams are through with five spots in the last 16 still up for grabs.</p>
                     <a href="https://www.bbc.com/sport/live/football/59413086">FOOTBALL</a>
                 </div>
            
