--- a/01-HTML-CSS/05-grid/GRID New BBC LOMM/News.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOMM/News.html
@@ -27,7 +27,7 @@
             <h1>News</h1>
             <div class="main-menu">
 
-                <div class="nav nav1"><a href="gridBbc1.html">Home</a></div>
+                <div class="nav nav1"><a href="home.html">Home</a></div>
                 <div class="nav nav2 ">Coronav navirus</div>
                 <div class="nav nav3">Climet</div>
                 <div class="nav nav4">Video</div>
