--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>news</title>
+    <title>BBC-News</title>
     <link rel="stylesheet" href="News_Lior.css">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
 </head>
