--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/BBC_SignIn.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/BBC_SignIn.html
@@ -30,7 +30,7 @@
           <li><a href="BBC_SignIn.html">Sign In</a></li>
           <li><a href="Task5.html">Home</a></li>
           <li><a href="">sport</a></li>
-          <li><a href="">lifeStyle</a></li>
+          <li><a href="artur.html">Worklife</a></li>
           <div class="search">
           <li id="Search"><input type="text" placeholder="Search.."><button type="submit">search</button>
         </div>
