--- a/01-HTML-CSS/06-BEM model/Roi/home.html
+++ b/01-HTML-CSS/06-BEM model/Roi/home.html
@@ -13,6 +13,8 @@
 <title>Fox news &nbsp;|&nbsp; Home</title>
 </head>
 <body>
-    
+    <div class ="middle_container"></div>
+    <div class ="left_container"></div>
+    <div class ="right_container"></div>
 </body>
 </html>
