--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
@@ -82,9 +82,9 @@
 
 
             <label for="firstname" class="form-label">First Name: </label>
-            <input type="text" class="form-control" id="email" placeholder="User Name " required><br>
+            <input type="text" class="form-control" id="email" placeholder="First Name " required><br>
             <label for="lastname" class="form-label">Last Name : </label>
-            <input type="email" class="form-control" id="email" placeholder="User Name " required><br>
+            <input type="text" class="form-control" id="email" placeholder="Last Name " required><br>
             <p></p>
            
               <label for="username" class="form-label">Creat User Name: </label>
