--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
@@ -90,7 +90,7 @@
               <label for="username" class="form-label">Creat User Name: </label>
               <input type="text" class="form-control" id="email" placeholder="User Name " required><br>
               <label for="email" class="form-label">Enter Your Email : </label>
-              <input type="email" class="form-control" id="email" placeholder="User Name " required><br>
+              <input type="email" class="form-control" id="email" placeholder="Email Address " required><br>
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div><br>
               <label for="Password" class="form-label">Creat A Paasword : </label>
               <input type="password" class="form-control" id="Name" placeholder="Password" required><br>
