--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/Signup.html
@@ -56,7 +56,7 @@
                 
                 <p></p>
 
-                <h3>WWhere are you from ?</h3>
+                <h3>Where are you from ?</h3>
                 <select class="select" name="News">
                  <option value="asia">Asia</option>
                  <option value="Europe">Europe</option>
