--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -16,7 +16,9 @@
     <ul>
       <li></li>
 
+      
       <li class=""><a class="artur-logoa" href="Task5.html"></a></li>
+      <li><a href="BBC_SignIn.html">Sign In</a></li>
       <li><a href="">news</a></li>
       <li><a href="">sport</a></li>
       <li><a href="">Worklife</a></li>
@@ -67,14 +69,22 @@
 
 
 
-
+<div class="editor" >
+  <span>editor's pics</span>
+</div>
 
     <div class="container-artur-grid-ad">
+
+
       <div class="container-grid">
-        <p>Lorem ipsum dolor sit amet consectetur adipiss labore si magnam molestias, sit corporis aperiam sint
-          similique praesentium?</p>
+        <div class="grid1">1</div>
+        <div class="grid2">2</div>
+        <div class="grid3">3</div>
+        <div class="grid4">4</div>
+        <div class="grid5">5</div>
+        <div class="grid6">6</div>
       </div>
-      <div class="container-grid">
+      <div class="container-ad">
         <p>Lorem ipsum dolor sit amet consecteteiciendis neque quasi magnam molestias, sit corporis aperiam sint
           similique praesentium?</p>
       </div>
