--- a/01-HTML-CSS/05-grid/bbc-zoom/news.html
+++ b/01-HTML-CSS/05-grid/bbc-zoom/news.html
@@ -11,32 +11,33 @@
 </head>
 
 <body>
-    
-  <ul>
-    <li><a href="news.html">Home</a></li>
-    <li><a href="#">News</a></li>
-    <li><a href="sport.html">Sport</a></li>
-    <li><a href="#">Reel</a></li>
-    <li><a href="#">travl</a></li>
-  </ul>
+    <nav>
+        <ul>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="sport.html">Sport</a></li>
+
+        </ul>
+    </nav>
     <div class="topContainer">
-        <div class="box picture"></div>
-        <div class="box text"></div>
-        <div class="box"></div>
+        <div class="box item1"></div>
+        <div class="box item2"></div>
+        <div class="box item3"></div>
+        <div class="box item4"></div>
+        <div class="box item5"></div>
+
     </div>
-    <div class="container">
-        <div class="box"> <img
-                src="https://i.picsum.photos/id/442/200/300.jpg?hmac=0CJZGZR5EIN-e7Q7zmUijm-B6pp4X4C57kuL4kR02ik">
-            <h2></h2>
-            <p>today</p>
-        </div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+
+    <div class="Container">
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+        <div class="box box5"></div>
+        <div class="box box6"></div>
+        <div class="box box7"></div>
+        <div class="box box8"></div>
+
     </div>
 </body>
 
