--- a/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/BBCHome.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/BBCHome.html
@@ -15,7 +15,7 @@
     <div class="menu home">
         <div class="nav logo"><img src="bbchome.png"></div>
         <div class="nav signIn"><a href='signin.html'>Sign In</a></div>
-        <div class="nav home"><a href='home.html'>Home</a></div>
+        <div class="nav home"><a href='BBCHome.html'>Home</a></div>
         <div class="nav news"><a href='news.html'>News</a></div>
         <div class="nav sport"><a href='sport.html'>Sport</a></div>
         <div class="nav reel"><a href='sport.html'>Reel</a></div>
