--- a/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/BBCHome.html
+++ b/01-HTML-CSS/05-grid/MarinaYossiShani/BBC-WEBSITE - Copy/BBCHome.html
@@ -32,7 +32,7 @@
     </div>
 
 
-    <div class="content ">
+    <div class="contentHome ">
         <div></div>
         <div class="big topHome">
             <img src="imgs/bighometop.jpg">
