--- a/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
+++ b/01-HTML-CSS/05-grid/אליה,עדו,ארתור/artur.html
@@ -17,7 +17,7 @@
       <li></li>
 
       
-      <li class=""><a class="artur-logoa" href="Task5.html"></a></li>
+      <li class="eliya.html"><a class="artur-logoa" href="Task5.html"></a></li>
       <li><a href="BBC_SignIn.html">Sign In</a></li>
       <li><a href="">news</a></li>
       <li><a href="">sport</a></li>
