--- a/01-HTML-CSS/05-grid/GRID New BBC LOHMM/home.html
+++ b/01-HTML-CSS/05-grid/GRID New BBC LOHMM/home.html
@@ -52,7 +52,7 @@
         <div class="box box2">
             <img src="image1/1.jpg">
             <div class="text">
-                <h1>the dollar</h1>
+                <h1>dollar rate</h1>
                 <p><span class="line">The dollar weakened</p>
             </div>
         </div>
