--- a/01-HTML-CSS/06-BEM model/noa artur shimon/sport-main.html
+++ b/01-HTML-CSS/06-BEM model/noa artur shimon/sport-main.html
@@ -17,12 +17,10 @@
         </span>
     </div>
     <div class="navbar">
-        <ul>
-            <li> <a href="sport-main.html">ראשי</a></li>
-            <li><a href="israeli-football.html">כדורגל ישראלי</a></li>
-            <a href="world-football.html">כדורגל עולמי</a>
-        </ul>
 
+        <a href="sport-main.html">ראשי</a>
+        <a href="israeli-football.html">כדורגל ישראלי</a>
+        <a href="world-football.html">כדורגל עולמי</a>
 
     </div>
 </body>
