--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/home.html
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="ad--row">
         <img src="https://s0.2mdn.net/simgad/15927267682331135883" alt="ad">
@@ -22,7 +24,8 @@
                 Borders shut as new coronavirus variant emerges
             </h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo molestias natus repellendus, voluptatibus quos saepe?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo molestias natus repellendus,
+                voluptatibus quos saepe?
             </p>
             <p>
                 WORLD
@@ -61,27 +64,101 @@
             </p>
         </div>
     </div>
-    <div class="title">
-        <h2>
-            News
-        </h2>
-    </div>
-    <div class="home--news">
-        <div class="articleGrid__home_card">
 
+    <div class="home--small">
+        <div class="home--small__row">
+            <div class="title">
+                <h2>
+                    News
+                </h2>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    New covid variant of huge international concern
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quas delectus possimus excepturi
+                    exercitationem quod quae.
+                </p>
+                <p>
+                    WORLD
+                </p>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    Shares hit as new Covid variant ratles investors
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere dolor, aliquam culpa modi at fugit
+                    commodi.
+                </p>
+                <p>
+                    BUSINESS
+                </p>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    Macron attacks Jhonson in migrant boat row
+                </h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet possimus consequatur molestiae,
+                    dignissimos est aliquid magni.
+                </p>
+                <p>
+                    EUROPE
+                </p>
+            </div>
         </div>
-        <div class="articleGrid__home_card">
-
-        </div>
-        <div class="articleGrid__home_card">
-
-        </div>
-        <div class="articleGrid__home_card">
-
-        </div>
-        <div class="articleGrid__home_card">
-
+        <div class="home--small__row"></div>
+            <div class="title">
+                <h2>
+                   Sport
+                </h2>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    Premier League news conferences & build-up
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptatem. Aspernatur eos ipsum
+                    dignissimos praesentium est?
+                </p>
+                <p>
+                    FOOTBALL
+                </p>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    Gary speed's death: A day of heartbreak and decade of sorrow
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat aspernatur! Laudantium facilis
+                    explicabo quia error!
+                </p>
+                <p>
+                    SPORT
+                </p>
+            </div>
+            <div class="home--small__row_article">
+                <img src="">
+                <h3>
+                    what can Man Utd expect from Rangnick?
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur officiis rerum eos numquam
+                    deleniti cum doloribus.
+                </p>
+                <p>
+                    FOOTBALL
+                </p>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
