--- a/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/home.html
+++ b/01-HTML-CSS/06-BEM model/Andrew&Eilya&michael/homeTask/home.html
@@ -68,14 +68,15 @@
 
     <div class="flex">
         <div class="home--small">
+            <div class="title">
+                <h2>
+                    News
+                </h2>
+            </div>
             <div class="home--small__row">
-                <div class="title">
-                    <h2>
-                        News
-                    </h2>
-                </div>
                 <div class="home--small__row_article">
-                    <img src="https://ichef.bbci.co.uk/live-experience/cps/480/cpsprodpb/vivo/live/images/2021/11/26/9ad04883-93cc-4fa1-ba65-27ff89ec7b48.jpg">
+                    <img
+                        src="https://ichef.bbci.co.uk/live-experience/cps/480/cpsprodpb/vivo/live/images/2021/11/26/9ad04883-93cc-4fa1-ba65-27ff89ec7b48.jpg">
                     <h3>
                         New covid variant of huge international concern
                     </h3>
@@ -103,7 +104,8 @@
                     </p>
                 </div>
                 <div class="home--small__row_article">
-                    <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/0BBB/production/_121830030_mediaitem121830028.jpg">
+                    <img
+                        src="https://ichef.bbci.co.uk/news/976/cpsprodpb/0BBB/production/_121830030_mediaitem121830028.jpg">
                     <h3>
                         Macron attacks Jhonson in migrant boat row
                     </h3>
@@ -116,56 +118,62 @@
                     </p>
                 </div>
             </div>
-            <div class="home--small__row"></div>
             <div class="title">
                 <h2>
                     Sport
                 </h2>
             </div>
-            <div class="home--small__row_article">
-                <img src="https://ichef.bbci.co.uk/live-experience/cps/480/cpsprodpb/vivo/live/images/2021/11/26/bbca106f-63b2-4016-80fc-2a9f887b3968.jpg">
-                <h3>
-                    Premier League news conferences & build-up
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptatem. Aspernatur eos ipsum
-                    dignissimos praesentium est?
-                </p>
-                <p>
-                    FOOTBALL
-                </p>
-            </div>
-            <div class="home--small__row_article">
-                <img src="https://news.files.bbci.co.uk/include/extra/shorthand/assets/sport/k5nr8ca4o3/assets/aZYi0IVyAY/speed-and-ramsey-3300x2166.jpeg">
-                <h3>
-                    Gary speed's death: A day of heartbreak and decade of sorrow
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat aspernatur! Laudantium
-                    facilis
-                    explicabo quia error!
-                </p>
-                <p>
-                    SPORT
-                </p>
-            </div>
-            <div class="home--small__row_article">
-                <img src="https://ichef.bbci.co.uk/onesport/cps/800/cpsprodpb/413C/production/_121800761_gettyimages-1235597042.jpg">
-                <h3>
-                    what can Man Utd expect from Rangnick?
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur officiis rerum eos numquam
-                    deleniti cum doloribus.
-                </p>
-                <p>
-                    FOOTBALL
-                </p>
+            <div class="home--small__row">
+                <div class="home--small__row_article">
+                    <img
+                        src="https://ichef.bbci.co.uk/live-experience/cps/480/cpsprodpb/vivo/live/images/2021/11/26/bbca106f-63b2-4016-80fc-2a9f887b3968.jpg">
+                    <h3>
+                        Premier League news conferences & build-up
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, voluptatem. Aspernatur eos ipsum
+                        dignissimos praesentium est?
+                    </p>
+                    <p>
+                        FOOTBALL
+                    </p>
+                </div>
+                <div class="home--small__row_article">
+                    <img
+                        src="https://news.files.bbci.co.uk/include/extra/shorthand/assets/sport/k5nr8ca4o3/assets/aZYi0IVyAY/speed-and-ramsey-3300x2166.jpeg">
+                    <h3>
+                        Gary speed's death: A day of heartbreak and decade of sorrow
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, fugiat aspernatur! Laudantium
+                        facilis
+                        explicabo quia error!
+                    </p>
+                    <p>
+                        SPORT
+                    </p>
+                </div>
+                <div class="home--small__row_article">
+                    <img
+                        src="https://ichef.bbci.co.uk/onesport/cps/800/cpsprodpb/413C/production/_121800761_gettyimages-1235597042.jpg">
+                    <h3>
+                        what can Man Utd expect from Rangnick?
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur officiis rerum eos
+                        numquam
+                        deleniti cum doloribus.
+                    </p>
+                    <p>
+                        FOOTBALL
+                    </p>
+                </div>
             </div>
         </div>
     </div>
     <div class="ad--column">
-        <img src="https://static.criteo.net/design/dt/88477/211105/752838576e0d40d8bee69d94508dd0fb_image_ad_300x600.gif">
+        <img
+            src="https://static.criteo.net/design/dt/88477/211105/752838576e0d40d8bee69d94508dd0fb_image_ad_300x600.gif">
     </div>
 </body>
 
